Blank input prevention,left-margins for msg/cmt submit buttons set -Attempt to fix message time zone problem To Do List: Comments.php:fked up column alignment,deletion

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ textarea#msg_search_box{
 }
 button#msg_submit{
 border: 2px solid #fafafa;
-width: 30%;
+width: 40%;
 height:45px;
 background:#3e94ec;
 background:-moz-linear-gradient(top, #595959 , #515151);
@@ -157,6 +157,7 @@ font-family:Verdana, Geneva, sans-serif;
 font-size:25px;
 font-weight:bolder;
 text-transform:uppercase;
+margin-left: 40px;
 }
 button#msg_search{
   border: 2px solid #fafafa;
